filter item gaps fix

--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  gap: 3rem;
+  gap: 1rem;
 }
 .filter-list .filter-item {
   display: flex;
